Bug 88961 - xf86-input-libinput (git version) regression, Xorg.0.log errors
Summary: xf86-input-libinput (git version) regression, Xorg.0.log errors
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/libinput (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-04 02:45 UTC by Jos van Wolput
Modified: 2015-02-04 04:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log xf86-input-libinput errors (39.01 KB, text/plain)
2015-02-04 02:45 UTC, Jos van Wolput
no flags Details

Description Jos van Wolput 2015-02-04 02:45:07 UTC
Created attachment 113145 [details]
Xorg.0.log xf86-input-libinput errors

Using the latest git version of xf86-input-libinput (45e9b6c6...) I get some
Xorg.0.log errors such as
(EE) libinput: Power Button: Failed to set LeftHanded to 0
(EE) libinput: Power Button: Failed to set ScrollButton to 0

See attached Xorg.0.log

This seems to be a regression, the released xf86-input-libinput-0.6.0 (commit 64e1b14598...) not showing any errors.

I am using the latest git versions of xserver and libinput.
Comment 1 Peter Hutterer 2015-02-04 04:15:16 UTC
fixed, thanks

commit 875f1696b780862886c75cd88b29fbc933ea7a1b
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed Feb 4 14:08:46 2015 +1000

    Only apply left-handed/scroll button configuration when it's available


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.